some about->delegate migrations

--- a/.reuse/templates/opal.commented.jinja2
+++ b/.reuse/templates/opal.commented.jinja2
@@ -1,5 +1,5 @@
-//@ This file is part of opal-about.
-//@ https://github.com/Pretty-SFOS/opal-about
+//@ This file is part of opal-delegates
+//@ https://github.com/Pretty-SFOS/opal-delegates
 {% for copyright_line in copyright_lines %}
 //@ {{ copyright_line }}
 {% endfor %}
